# EMM_INDUSTRIAL_VIBRATION

./: .gitignore  LICENSE  README.md  motion_magnification_gui.py  reporte_estadistico.py  run_gui.bat
cpp_migration/: CMakeLists.txt
cpp_migration/src/: MainWindow.cpp  MainWindow.h  MotionMagnifier.cpp  MotionMagnifier.h  main.cpp
historiales/: vibration_recording_20251204_175028.csv
